--- a/thule-email-service/build.gradle
+++ b/thule-email-service/build.gradle
@@ -3,11 +3,6 @@ buildscript {
         maven { url "http://$nexusHost:$nexusPort/repository/maven-public" }
         mavenLocal()
     }
-
-    // Changing modules are cached by default for 24 hours, change the default to never and mark snapshots as changing (must be within the buildscript)
-    configurations.all {
-        resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
-    }
 }
 
 plugins {
@@ -32,7 +27,7 @@ dependencyManagement {
 }
 
 dependencies {
-    compile("uk.co.serin.thule:thule-spring-boot-starter-utils:1.0.0-SNAPSHOT") { changing = true }
+    compile("uk.co.serin.thule:thule-spring-boot-starter-utils:1.0.0-SNAPSHOT")
     compile("net.logstash.logback:logstash-logback-encoder:5.0")
     compile("org.jolokia:jolokia-core") // Required for JMX support when using the Admin server
     compile("org.springframework.boot:spring-boot-starter-actuator")
@@ -45,6 +40,6 @@ dependencies {
     // Required to retry connecting to the discovery server when it is not available at startup
     compile("org.springframework.retry:spring-retry")
 
-    testCompile("uk.co.serin.thule:thule-spring-boot-starter-test:1.0.0-SNAPSHOT") { changing = true }
+    testCompile("uk.co.serin.thule:thule-spring-boot-starter-test:1.0.0-SNAPSHOT")
     testCompile("com.bitmechanic:dumbster:1.9.0.2")
 }
