--- a/thule-people-service/build.gradle
+++ b/thule-people-service/build.gradle
@@ -5,11 +5,6 @@ buildscript {
         maven { url "http://$nexusHost:$nexusPort/repository/maven-public" }
         mavenLocal()
     }
-
-    // Changing modules are cached by default for 24 hours, change the default to never and mark snapshots as changing (must be within the buildscript)
-    configurations.all {
-        resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
-    }
 }
 
 plugins {
@@ -56,7 +51,7 @@ dependencyManagement {
 }
 
 dependencies {
-    compile("uk.co.serin.thule:thule-spring-boot-starter-utils:1.0.0-SNAPSHOT") { changing = true }
+    compile("uk.co.serin.thule:thule-spring-boot-starter-utils:1.0.0-SNAPSHOT")
     compile("com.googlecode.log4jdbc:log4jdbc:1.2")
     compile("com.h2database:h2")
     compile("net.logstash.logback:logstash-logback-encoder:5.0")
@@ -76,7 +71,7 @@ dependencies {
     // Required to retry connecting to the discovery server when it is not available at startup
     compile("org.springframework.retry:spring-retry")
 
-    testCompile("uk.co.serin.thule:thule-spring-boot-starter-test:1.0.0-SNAPSHOT") { changing = true }
+    testCompile("uk.co.serin.thule:thule-spring-boot-starter-test:1.0.0-SNAPSHOT")
 
     itestCompile("com.oracle:ojdbc6:11.2.0.1.0")
     itestCompile("mysql:mysql-connector-java")
