--- a/gradle/build-gitflow-config.gradle
+++ b/gradle/build-gitflow-config.gradle
@@ -2,7 +2,7 @@
 ext {
     branch = getBranch()
     branchType = (branch =~ /([^\/]+)/)[0][1]
-    mavenDeployTarget = getDeployTarget(branch)
+    nexusDeployTarget = getDeployTarget(branch)
     isSnapshotVersion = project.version.endsWith('-SNAPSHOT')
 }
 
@@ -47,12 +47,13 @@ if ((branchType == "release" || branchType == "hotfix") && branch != branchType 
     throw new GradleException("\n*** GIT branch [$branch] version does not match gradle version [$version] ***")
 }
 
-// Disable publishing to maven if we are building a version not destined for a nexus repo,
-// for example, a feature or bugfix branch
-if (mavenDeployTarget == "none") {
+// Disable publishing the jar and docker image to maven if we are building a version not destined
+// for a nexus repo, for example, a feature or bugfix branch
+if (nexusDeployTarget == "none") {
+    dockerPush.onlyIf { false }
     publish.onlyIf { false }
     // Task publishMavenJavaPublicationToMavenRepository is added dynamically during the
-    // configuration phase. Disable it with the following closure.
+    // configuration phase. Disable it with the following closure
     tasks.whenTaskAdded { task ->
         if (task.name == "publishMavenJavaPublicationToMavenRepository") {
             task.onlyIf { false }
@@ -60,20 +61,24 @@ if (mavenDeployTarget == "none") {
     }
 }
 
-// Download the pre-built artifact from Nexus staging ready for publishing to Nexus release
+// Master branch specific processing
 if (branchType == "master") {
-    // Disable any build related tasks if the branch is master
+    // Disable any build related tasks not related to publishing
     afterEvaluate { project ->
         project.tasks.collect { task ->
-            if (task.name != "clean" && !task.name.startsWith("publish") && !task.name.startsWith("gitflow")) {
+            if (task.name != "clean"
+                    && !task.name.startsWith("publish")
+                    && !task.name.startsWith("dockerPrepare")
+                    && !task.name.startsWith("dockerPush")
+                    && !task.name.startsWith("gitflow")) {
                 task.onlyIf { false }
             }
         }
     }
 
-    // Download the pre-built artifact from Nexus staging
-    task gitflowDownloadArtifactFromStaging() {
-        publish.dependsOn tasks.gitflowDownloadArtifactFromStaging
+    // Download the pre-built jar artifact from Nexus staging
+    task gitflowDownloadJarArtifactFromStaging() {
+        publish.dependsOn tasks.gitflowDownloadJarArtifactFromStaging
 
         doLast {
             // Define the dependencies configuration ignoring all transitive dependencies, i.e. we only
@@ -101,6 +106,20 @@ if (branchType == "master") {
 
             // Unhide the group name
             project.group=actualProjectGroup
+        }
+    }
+
+    // Download the pre-built docker image from Nexus staging and tag it as the correct name ready to publish
+    task gitflowDownloadDockerArtifactFromStaging() {
+        dockerPush.dependsOn tasks.gitflowDownloadDockerArtifactFromStaging
+
+        doLast {
+            exec {
+                commandLine "docker", "pull", "$nexusHost:8084/${jar.baseName}:${project.version}"
+            }
+            exec {
+                commandLine "docker", "tag", "$nexusHost:8084/${jar.baseName}:${project.version}", "$nexusHost:8085/${jar.baseName}:${project.version}"
+            }
         }
     }
 
