--- a/gradle/plugin-docker-with-spring-boot-1.5.x-config.gradle
+++ b/gradle/plugin-docker-with-spring-boot-1.5.x-config.gradle
@@ -1,5 +1,32 @@
+// Define variables
+ext {
+    defaultMavenRepoType = project.version.endsWith("-SNAPSHOT") ? "snapshots" : "releases"
+    nexusDeployTarget =  project.hasProperty("nexusDeployTarget") ? project.getProperty("nexusDeployTarget").toLowerCase() : defaultMavenRepoType
+
+    switch (nexusDeployTarget) {
+        case "none":
+            dockerRegistryPort = "8083"
+            break
+        case "snapshots":
+            dockerRegistryPort = "8083"
+            break
+        case "staging":
+            dockerRegistryPort = "8084"
+            break
+        case "releases":
+            dockerRegistryPort = "8085"
+            break
+        default:
+            throw new GradleException("\n*** Unknown nexusDeployTarget [$nexusDeployTarget] ***")
+            break
+    }
+
+    dockerImageName = "$nexusHost:$dockerRegistryPort/${jar.baseName}:${project.version}"
+}
+
+// Configure docker plugin
 docker {
-    name "$nexusHost:$nexusDockerRegistryPort/${jar.baseName}"
+    name "$dockerImageName"
     dockerfile project.file("src/main/docker/Dockerfile")
     buildArgs(["JAR_FILE": "${jar.archiveName}"])
     files jar.archivePath, "src/main/docker/docker-entrypoint.sh"
@@ -10,13 +37,17 @@ docker {
 }
 
 // The docker plugin should be able to tag an image but fails to do so due to bug https://github.com/palantir/gradle-docker/issues/139
-// This task is a workaround whereby we tag it ourselves
+// This task is a workaround whereby we tag it ourselves.
 task dockerTag(dependsOn: tasks.docker) {
     tasks.docker.finalizedBy dockerTag
 
     doLast {
         exec {
-            commandLine "docker", "tag", docker.name, docker.name + ":" + project.version
+            // Tag as the "latest", i.e. the default tag when no explicit tag is specified
+            commandLine "docker", "tag", "$dockerImageName", "${jar.baseName}"
         }
     }
 }
+
+// Ensure the docker image is pushed to the docker registry whenever we publish
+tasks.publish.dependsOn dockerPush
