--- a/thule-email-service/src/ctest/docker/thule-email-service/docker-compose.yml
+++ b/thule-email-service/src/ctest/docker/thule-email-service/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.5"
 services:
   ################################  thule-email-server  ################################
   thule-email-service:
-    image: pooh:8082/thule-email-service
+    image: thule-email-service
     environment:
       EUREKA_CLIENT_ENABLED: "false"
       SPRING_CLOUD_CONFIG_ENABLED: "false"
