Changed DockerCompose down method to use down rather than rm so that docker networks are also removed

--- a/thule-people-service/build.gradle
+++ b/thule-people-service/build.gradle
@@ -33,7 +33,7 @@ itest {
     afterSuite { descriptor ->
         if (descriptor.getName().contains("Gradle Test Executor")) {
             exec {
-                commandLine "docker-compose", "-f", "src/itest/docker/$project.name/docker-compose-mysql.yml", "rm", "-fsv"
+                commandLine "docker-compose", "-f", "src/itest/docker/$project.name/docker-compose-mysql.yml", "down", "-v", "--remove-orphans"
             }
         }
     }
