Renamed thule-spring-boot-starters to thule-shared

--- a/thule-shared/settings.gradle
+++ b/thule-shared/settings.gradle
@@ -4,7 +4,7 @@ pluginManagement {
     }
 }
 
-rootProject.name = "thule-spring-boot-starters"
+rootProject.name = "thule-shared"
 
 include "thule-spring-boot-starter-test"
 include "thule-spring-boot-starter-utils"
