--- a/thule-config-service/src/main/resources/config/application.yml
+++ b/thule-config-service/src/main/resources/config/application.yml
@@ -25,3 +25,10 @@ spring:
         percentage: 1.0
   zipkin:
     baseUrl: http://zipkin-host:9411
+
+# Thule configuration
+thule:
+  logging:
+    logstash:
+      host: logstash-host
+      port: 5400
