Refactored service properties to have a service suffix

--- a/thule-config-service/src/main/resources/config/application.yml
+++ b/thule-config-service/src/main/resources/config/application.yml
@@ -24,11 +24,12 @@ spring:
       sampler:
         percentage: 1.0
   zipkin:
-    baseUrl: http://zipkin-host:9411
+    baseUrl: http://172.17.0.1:9411 # Docker bridge IP address
 
 # Thule configuration
 thule:
-  logging:
-    logstash:
-      host: logstash-host
-      port: 5400
+  shared:
+    logging:
+      logstash:
+        host: 172.17.0.1 # Docker bridge IP address
+        port: 5400
