--- a/thule-people-service/build.gradle
+++ b/thule-people-service/build.gradle
@@ -53,7 +53,8 @@ dependencyManagement {
 dependencies {
     compile("uk.co.serin.thule:thule-spring-boot-starter-utils:1.0.0-SNAPSHOT")
     compile("com.googlecode.log4jdbc:log4jdbc:1.2")
-    compile("com.h2database:h2")
+    compile("mysql:mysql-connector-java")
+    compile("org.flywaydb:flyway-core")
     compile("org.jolokia:jolokia-core") // Required for JMX support when using the Admin server
     compile("org.springframework.boot:spring-boot-starter-actuator")
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
@@ -72,8 +73,7 @@ dependencies {
 
     testCompile("uk.co.serin.thule:thule-spring-boot-starter-test:1.0.0-SNAPSHOT")
 
+    itestCompile("com.h2database:h2")
     itestCompile("com.oracle:ojdbc6:11.2.0.1.0")
-    itestCompile("mysql:mysql-connector-java")
-    itestCompile("org.flywaydb:flyway-core")
     itestCompile("org.hsqldb:hsqldb")
 }
