--- a/thule-people-service/src/main/resources/config/application-dev.yml
+++ b/thule-people-service/src/main/resources/config/application-dev.yml
@@ -1,3 +1,13 @@
+# Spring logging configuration
+logging:
+  level:
+    uk.co.serin.thule: trace
+
 # Spring server configuration
 server:
   port: 8090
+
+# Spring boot configuration
+spring:
+  flyway:
+    baseline-on-migrate: true
