--- a/thule-people-service/src/main/resources/config/application-itest.yml
+++ b/thule-people-service/src/main/resources/config/application-itest.yml
@@ -1,46 +1,42 @@
+# Spring logging configuration
+logging:
+  level:
+    uk.co.serin.thule: trace
+
+# Spring boot configuration
+spring:
+  flyway:
+    baseline-on-migrate: true
+
 # Thule configuration
-thule:
-  wiremock:
-    port: 10123
+
+######################################### NESTED INTEGRATION TEST PROFILES #######################################
+---
+spring:
+  profiles: itest-h2
+# Spring boot configuration
+  flyway:
+    enabled: false
 
 ---
 spring:
   profiles: itest-hsql
 # Spring boot configuration
   datasource:
-    driver-class-name: net.sf.log4jdbc.DriverSpy
     url: jdbc:log4jdbc:hsqldb:mem:testdb
-
----
-spring:
-  profiles: itest-mysql
-# Spring boot configuration
-  datasource:
-    driver-class-name: net.sf.log4jdbc.DriverSpy
-    password: thule
-    url: jdbc:log4jdbc:mysql://docker-host:3307/thule
-    username: thule
   flyway:
-    baseline-on-migrate: true
-    enabled: true
-    locations: classpath:flyway/mysql/migration
-    password: root
-    url: jdbc:mysql://docker-host:3307/mysql
-    user: root
+    enabled: false
 
 ---
 spring:
   profiles: itest-oracle
 # Spring boot configuration
   datasource:
-    driver-class-name: net.sf.log4jdbc.DriverSpy
     password: thule
     url: jdbc:log4jdbc:oracle:thin:@oracle-host:1521:xe
     username: thule
   flyway:
-    baseline-on-migrate: true
-    enabled: true
-    locations: classpath:flyway/oracle/migration
+    locations: classpath:oracle/db/migration
     password: oracle
     url: jdbc:oracle:thin:@oracle-host:1521:xe
     user: system
