Refactored service properties to have a service suffix

--- a/thule-people-service/src/main/resources/config/application-itest.yml
+++ b/thule-people-service/src/main/resources/config/application-itest.yml
@@ -9,6 +9,10 @@ spring:
     baseline-on-migrate: true
 
 # Thule configuration
+thule:
+  peopleservice:
+    mysql:
+      port: 3307
 
 ######################################### NESTED INTEGRATION TEST PROFILES #######################################
 ---
