Refactored service properties to have a service suffix

--- a/thule-cloud/src/ctest/docker/thule-cloud/docker-compose.yml
+++ b/thule-cloud/src/ctest/docker/thule-cloud/docker-compose.yml
@@ -73,3 +73,17 @@ services:
     hostname: people-service-1
     ports:
       - 9090:8080
+
+  ################################  Servers and Databases Required By Container Tests  ################################
+  mysql:
+    image: mysql
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      TZ: UTC
+    networks:
+      default:
+        aliases:
+          - mysql-host
+    ports:
+      - 3307:3306 # Required to allow container tests to test that the database has been written to when testing the api
+    restart: always
