Refactored service properties to have a service suffix

--- a/thule-people-service/src/ctest/docker/thule-people-service/docker-compose.yml
+++ b/thule-people-service/src/ctest/docker/thule-people-service/docker-compose.yml
@@ -9,6 +9,7 @@ services:
     hostname: people-service-1
     ports:
       - 8090:8080
+    restart: always
 
   ################################  Servers and Databases Required By Container Tests  ################################
   mysql:
