--- a/thule-people-service/src/main/resources/config/application-dev.yml
+++ b/thule-people-service/src/main/resources/config/application-dev.yml
@@ -1,7 +1,7 @@
 # Spring logging configuration
 logging:
   level:
-    uk.co.serin.thule: trace
+    uk.co.serin: trace
 
 # Spring server configuration
 server:
