--- a/thule-people-service/src/ctest/docker/thule-people-service/docker-compose.yml
+++ b/thule-people-service/src/ctest/docker/thule-people-service/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: thule-people-service
     environment:
       EUREKA_CLIENT_ENABLED: "false" # Standalone container tests do not need a discovery service
-      LOGGING_LEVEL_uk.co.serin: trace
+      LOGGING_LEVEL_UK_CO_SERIN: trace
       SPRING_CLOUD_BOOTSTRAP_ENABLED: "false" # Disable spring cloud features such as config server and service discovery
       SPRING_FLYWAY_BASELINE-ON-MIGRATE: "true" # Allow for case where the schema exists but Flyway did not create it
       THULE_PEOPLESERVICE_MYSQL_HOST: mysql-host
