Perform docker pull before building the docker image to allow for the case when the base image has been updated

--- a/gradle/plugin-docker-with-spring-boot-1.5.x-config.gradle
+++ b/gradle/plugin-docker-with-spring-boot-1.5.x-config.gradle
@@ -33,6 +33,7 @@ if (! new File("src/main/docker/Dockerfile").exists()) {
         dockerfile project.file("src/main/docker/Dockerfile")
         buildArgs(["JAR_FILE": "${jar.archiveName}"])
         files jar.archivePath, "src/main/docker/docker-entrypoint.sh"
+        pull true
 
         tasks.docker.dependsOn bootRepackage
         tasks.docker.shouldRunAfter test, itest
