Fixed incorrect sleuth config paramater name

--- a/thule-discovery-service/src/main/resources/config/application.yml
+++ b/thule-discovery-service/src/main/resources/config/application.yml
@@ -32,7 +32,7 @@ server:
 spring:
   sleuth:
       sampler:
-        percentage: 1.0
+        probability: 1.0
   zipkin:
     baseUrl: http://172.17.0.1:9411 # Docker bridge IP address
 
