--- a/thule-admin-server/src/main/resources/config/application.yml
+++ b/thule-admin-server/src/main/resources/config/application.yml
@@ -33,7 +33,7 @@ spring:
       write_dates_as_timestamps: false
   sleuth:
       sampler:
-        percentage: 1.0
+        probability: 1.0
   zipkin:
     baseUrl: http://172.17.0.1:9411 # Docker bridge IP address
 
