--- a/thule-config-service/src/main/resources/config/application.yml
+++ b/thule-config-service/src/main/resources/config/application.yml
@@ -22,7 +22,7 @@ spring:
           searchLocations: classpath:/config/{application}
   sleuth:
       sampler:
-        percentage: 1.0
+        probability: 1.0
   zipkin:
     baseUrl: http://172.17.0.1:9411 # Docker bridge IP address
 
