--- a/thule-email-service/src/main/resources/config/application.yml
+++ b/thule-email-service/src/main/resources/config/application.yml
@@ -33,7 +33,7 @@ spring:
       mail.smtp.starttls.enable: true
   sleuth:
       sampler:
-        percentage: 1.0
+        probability: 1.0
   zipkin:
     baseUrl: http://172.17.0.1:9411 # Docker bridge IP address
 
