Fixed missing eureka server port.

--- a/thule-discovery-service/src/main/resources/config/application.yml
+++ b/thule-discovery-service/src/main/resources/config/application.yml
@@ -24,6 +24,10 @@ logging:
     org.springframework: info
     uk.co.serin: trace
 
+# Spring server configuration
+server:
+  port: 8080
+
 # Spring boot configuration
 spring:
   sleuth:
