--- a/thule-people-service/src/main/resources/config/application-itest.yml
+++ b/thule-people-service/src/main/resources/config/application-itest.yml
@@ -42,10 +42,10 @@ spring:
 # Spring boot configuration
   datasource:
     password: thule
-    url: jdbc:log4jdbc:oracle:thin:@oracle-host:1521:xe
+    url: jdbc:log4jdbc:oracle:thin:@oracle:1521:xe
     username: thule
   flyway:
     locations: classpath:oracle/db/migration
     password: oracle
-    url: jdbc:oracle:thin:@oracle-host:1521:xe
+    url: jdbc:oracle:thin:@oracle:1521:xe
     user: system
