--- a/thule-discovery-service/build.gradle
+++ b/thule-discovery-service/build.gradle
@@ -38,7 +38,6 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-actuator")
     compile("org.springframework.boot:spring-boot-starter-logging")
     compile("org.springframework.cloud:spring-cloud-starter-config")
-    compile("org.springframework.cloud:spring-cloud-starter-netflix-eureka-client")
     compile("org.springframework.cloud:spring-cloud-starter-netflix-eureka-server")
     compile("org.springframework.cloud:spring-cloud-starter-sleuth")
     compile("org.springframework.cloud:spring-cloud-starter-zipkin")
@@ -46,4 +45,7 @@ dependencies {
     compile("org.springframework.retry:spring-retry")
 
     testCompile("uk.co.serin.thule:thule-spring-boot-starter-test:1.0.0-SNAPSHOT")
+
+    itestCompile("org.springframework.cloud:spring-cloud-starter-netflix-eureka-client")
+    itestCompile("org.springframework.cloud:spring-cloud-starter-openfeign")
 }
