Upgraded spring cloud from FINCHLEY.M9 to FINCHLEY.RC1

--- a/thule-config-service/build.gradle
+++ b/thule-config-service/build.gradle
@@ -61,7 +61,7 @@ task processResourcesFromMicroServices {
 // Dependencies
 dependencyManagement {
     imports {
-        mavenBom("org.springframework.cloud:spring-cloud-dependencies:Finchley.M9")
+        mavenBom("org.springframework.cloud:spring-cloud-dependencies:FINCHLEY.RC1")
     }
 }
 
