--- a/thule-edge-server/build.gradle
+++ b/thule-edge-server/build.gradle
@@ -22,7 +22,7 @@ apply from: "${rootDir}/../gradle/build-config.gradle"
 // Dependencies
 dependencyManagement {
     imports {
-        mavenBom("org.springframework.cloud:spring-cloud-dependencies:Finchley.M9")
+        mavenBom("org.springframework.cloud:spring-cloud-dependencies:FINCHLEY.RC1")
     }
 }
 
