Upgraded spring cloud from FINCHLEY.RC1 to Finchley.RC1

--- a/thule-shared/build.gradle
+++ b/thule-shared/build.gradle
@@ -28,7 +28,7 @@ subprojects {
     // Dependencies
     dependencyManagement {
         imports {
-            mavenBom("org.springframework.cloud:spring-cloud-dependencies:FINCHLEY.RC1")
+            mavenBom("org.springframework.cloud:spring-cloud-dependencies:Finchley.RC1")
         }
     }
 
