--- a/thule-people-service/build.gradle
+++ b/thule-people-service/build.gradle
@@ -46,7 +46,7 @@ itest {
 // Dependencies
 dependencyManagement {
     imports {
-        mavenBom("org.springframework.cloud:spring-cloud-dependencies:FINCHLEY.RC1")
+        mavenBom("org.springframework.cloud:spring-cloud-dependencies:Finchley.RC1")
     }
 }
 
