--- a/thule-discovery-service/build.gradle
+++ b/thule-discovery-service/build.gradle
@@ -20,6 +20,14 @@ apply plugin: "io.spring.dependency-management"
 apply from: "${rootDir}/../gradle/build-config.gradle"
 
 // Non-standard Serin gradle plugin config
+// Exclude the config and eureka server from the container tests (client side)
+configurations {
+    ctestCompile {
+        extendsFrom testCompile
+        exclude group: "org.springframework.cloud", module: "spring-cloud-starter-netflix-eureka-server"
+        exclude group: "org.springframework.cloud", module: "spring-cloud-starter-config"
+    }
+}
 // Required for Java9
 //    tasks.withType(Test) {
 //        jvmArgs += ["--add-modules", "java.xml.bind"]
@@ -46,6 +54,8 @@ dependencies {
 
     testCompile("uk.co.serin.thule:thule-spring-boot-starter-test:1.0.0-SNAPSHOT")
 
-    itestCompile("org.springframework.cloud:spring-cloud-starter-netflix-eureka-client")
     itestCompile("org.springframework.cloud:spring-cloud-starter-openfeign")
+
+    ctestCompile("org.springframework.cloud:spring-cloud-starter-openfeign")
+    ctestCompile("org.springframework.cloud:spring-cloud-starter-netflix-eureka-client")
 }
