--- a/thule-discovery-service/src/main/resources/config/application-ctest.yml
+++ b/thule-discovery-service/src/main/resources/config/application-ctest.yml
@@ -1,13 +1,14 @@
+# Eureka configuration
+eureka:
+  client:
+    registerWithEureka: false
+
 # Spring logging configuration
 logging:
   level:
     uk.co.serin: trace
 
-# Spring server configuration
-server:
-  port: 8761
-
 # Thule configuration
 thule:
   discoveryservice:
-    host: localhost
+    port: 8761
